# codenames

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose-aws.yml  docker-compose.yml  help.mk  package.json
app/: .eslintrc.js  Dockerfile  Makefile  README.md  constants.ts  model.ts  next.config.js  package.json  tsconfig.json
app/.storybook/: preview.js
app/components/: ApiContext.tsx  ContentContainer.tsx  Home.tsx  NewGame.tsx  home.tsx
app/components/game/: Board.tsx  Card.tsx  Game.stories.tsx  Game.tsx  GameContext.tsx  GameInfo.tsx  GameLanding.tsx  GameList.tsx  GamePlayer.tsx  GuessLog.tsx  Info.styles.ts  Info.tsx  Join.tsx  Play.tsx  PlayerList.tsx  [name].tsx  index.tsx
app/components/game/[name]/: [player].tsx
app/components/game/info/: Action.styles.ts  Action.tsx  Clue.stories.tsx  Clue.tsx  GameLog.tsx  GuessLog.tsx  Info.styles.ts  Info.tsx  PlayerList.stories.tsx  PlayerList.styles.ts  PlayerList.tsx
app/components/game/info/action/: Action.styles.ts  Action.tsx  EndTurn.tsx  LeaveGame.tsx  StartTurn.stories.tsx  StartTurn.tsx
app/design/: GlobalStyle.ts  Modal.stories.tsx  Modal.tsx  button.ts  color.ts  layout.tsx  responsive.ts
app/hooks/: useFetch.ts  useInputState.ts  usePoll.ts
app/pages/: _app.tsx  _document.tsx  index.tsx
app/pages/api/: game.ts  health.ts  index.ts
app/pages/api/game/: [name].ts
app/pages/game/: [name].tsx  index.tsx
app/pages/game/[name]/: [player].tsx
app/stories/: Clue.stories.tsx  Game.stories.tsx  Modal.stories.tsx  PlayerList.stories.tsx  testData.ts
app/utils/: fetch.ts
infra/: .eslintrc.js  Makefile  app_user_data.sh  cdk.json  dev_user_data.sh  package.json  tsconfig.json
infra/lib/: CloudfrontConstruct.ts  ClusterConstruct.ts  CodenamesStack.ts  DevelopmentInstanceConstruct.ts  DynamoConstruct.ts  InstanceConstruct.ts  LambdaConstruct.ts  RepositoryConstruct.ts
service/: Cargo.toml  Dockerfile  Dockerfile.local  Dockerfile.test  Dockerfile.wash  Makefile  Pipfile  codenames-manifest.json  codenames-service.postman_collection.json  codenames-service.postman_environment.docker.json  codenames-service.postman_environment.local.json  docker-compose.yml  integration_tests.py  load_test.py  package.json
service/actix/: Cargo.toml
service/actix/src/: dictionary.rs  main.rs  util.rs
service/actix/src/game/: board.rs  dao.rs  mod.rs  player_routes.rs  routes.rs
service/common/: Cargo.toml
service/common/src/: dictionary.rs  lib.rs
service/common/src/game/: board.rs  dao.rs  mod.rs
service/common/src/game/model/: board.rs  card.rs  info.rs  info_tests.rs  team.rs
service/domain/: Cargo.toml
service/domain/src/: dictionary.rs  lib.rs
service/domain/src/dictionary/: model.rs  service.rs  util.rs
service/domain/src/game/: board.rs  board_service.rs  card.rs  dao.rs  mod.rs  model.rs  service.rs
service/domain/src/game/board/: mod.rs  model.rs  service.rs
service/domain/src/game/card/: model.rs
service/domain/src/game/model/: card.rs  error.rs  info.rs  info_test.rs  info_tests.rs  mod.rs  mod_tests.rs  player.rs  turn.rs
service/domain/src/game/player/: model.rs
service/lambda/: Cargo.toml
service/lambda/src/: main.rs
service/local/: Cargo.toml
service/local/src/: actix_routes.rs  main.rs
service/local/src/dictionary/: service.rs
service/local/src/game/: dao.rs  mod.rs  model.rs  routes.rs
service/local/src/game/board/: service.rs
service/local/src/game/player/: mod.rs  routes.rs
service/src/: game.rs  lib.rs  main.rs  model.rs  wasm_routes.rs
service/src/dictionary/: service.rs  util.rs
service/src/game/: api.rs  dao.rs  dictionary.rs  mod.rs  model.rs  routes.rs  service.rs
service/src/game/board/: model.rs  service.rs  util.rs
service/src/game/card/: model.rs
service/src/resources/dictionary/: default.txt
service/wasm/: Cargo.toml  manifest.yaml
service/wasm/src/: dictionary.rs  lib.rs  root_router.rs  routed_request.rs  router.rs  wasm_routes.rs
service/wasm/src/dictionary/: service.rs
service/wasm/src/game/: board.rs  dao.rs  game_router.rs  mod.rs  router.rs
service/wasm/src/game/board/: service.rs
service/wasm/src/game/player/: mod.rs  player_router.rs
