[package]
name = "service"
version = "0.1.0"
authors = ["Matthew T. Gilbride <mgilbride@chariotsolutions.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.118"
serde_json = "1.0"

# wasmcloud
wapc-guest = "0.4.0"
actor-core = { git = "https://github.com/wasmCloud/actor-interfaces", branch = "main", features = ["guest"] }
actor-http-server = { git = "https://github.com/wasmCloud/actor-interfaces", branch = "main" }
actor-keyvalue = { git = "https://github.com/wasmCloud/actor-interfaces", branch = "main", features = ["guest"] }

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true

