[package]
name = "codenames-actix"
version = "0.1.0"
authors = ["Matthew T. Gilbride <mgilbride@chariotsolutions.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.52"
aws-config = "0.5.2"
aws-sdk-dynamodb = "0.5.2"
actix-cors = "0.6.0"
actix-web = "4.0.1"
tokio = { version = "1.17.0", features = ["full"] }
actix-http = "2"
chrono = "0.4.19"
env_logger = "0.8.2"
codenames-domain = { path = "../domain" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.118"
serde_json = "1.0"
rand = "0.8.1"

[dependencies.redis]
version = "*"