[package]
name = "codenames-domain"
version = "0.1.0"
authors = ["Matthew T. Gilbride <mgilbride@chariotsolutions.com>"]
edition = "2018"

[dependencies]
dyn-clone = "1.0.4"
enum-display-derive = "0.1.0"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.118"
serde_json = "1.0"

