[package]
name = "codenames-lambda"
version = "0.1.0"
authors = ["Matthew T. Gilbride <mgilbride@chariotsolutions.com>"]
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
codenames-common = { path = "../common" }
codenames-domain = { path = "../domain" }
lambda_http = "0.13"
lambda_runtime = "0.13"
percent-encoding = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
