[package]
name = "local"
version = "0.1.0"
authors = ["Matthew T. Gilbride <mgilbride@chariotsolutions.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
domain = { path = "../domain" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.118"
serde_json = "1.0"
rand = "0.8.1"

[dependencies.redis]
version = "*"