[package]
name = "codenames-wasm"
version = "0.1.0"
authors = ["Matthew T. Gilbride <mgilbride@chariotsolutions.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
codenames-domain = { path = "../domain" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.118"
serde_json = "1.0"
wapc-guest = "0.4.0"
wasmcloud-actor-core = { git = "https://github.com/wasmCloud/actor-interfaces", branch = "main", features = ["guest"] }
wasmcloud-actor-http-server = { git = "https://github.com/wasmCloud/actor-interfaces", branch = "main", features = ["guest"] }
wasmcloud-actor-keyvalue = { git = "https://github.com/wasmCloud/actor-interfaces", branch = "main", features = ["guest"] }
wasmcloud-actor-extras = { git = "https://github.com/wasmCloud/actor-interfaces", branch = "main", features = ["guest"] }
