[package]
name = "codenames-wasm"
version = "0.1.0"
authors = ["Matthew T. Gilbride <mgilbride@chariotsolutions.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
codenames-domain = { path = "../domain" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.118"
serde_json = "1.0"
wapc-guest = "0.4.0"
wasmcloud-actor-core = { version = "0.2.0", features = ["guest"] }
wasmcloud-actor-http-server = { version = "0.1.0", features = ["guest"] }
wasmcloud-actor-keyvalue = { version = "0.2.0", features = ["guest"] }
wasmcloud-actor-extras = { version = "0.1.0", features = ["guest"] }
