[package]
name = "codenames-wasm"
version = "0.1.0"
authors = ["Matthew T. Gilbride <matthewtgilbride@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
codenames-domain = { path = "../domain" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.118"
serde_json = "1.0"
wapc-guest = "0.4.0"
log = "0.4.14"
urlencoding = "1.3.2"

wasmbus-rpc = "0.8.2"
wasmcloud-interface-keyvalue = "0.6.0"
wasmcloud-interface-httpserver = "0.5.0"
wasmcloud-interface-numbergen = "0.5.0"
wasmcloud-interface-logging = "0.5.0"
